--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>This is becoming crazy but i'm loving it</h1>
+    <img src="tenet.png" alt="">
+    <img src="2021-01-19-removebg-preview (2).png" alt="">
 </body>
 </html>
