--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>This is becoming crazy but i'm loving it</h1>
+    <h3>okay, that's sounds crazy</h3>
+    <p>what the hell is going on</p>
     <img src="tenet.png" alt="">
     <img src="2021-01-19-removebg-preview (2).png" alt="">
 </body>
