--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>what the hell is going on</p>
     <img src="tenet.png" alt="">
     <img src="2021-01-19-removebg-preview (2).png" alt="">
+    <img src="cuigear12.png" alt="">
 </body>
 </html>
