--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>This is becoming crazy but i'm loving it</h1>
     <h3>okay, that's sounds crazy</h3>
     <p>what the hell is going on</p>
+    <div>
+        <h1>Christofar Nolan</h1>
+        <p>Well, there is nothing new about him. He is a popular director for making extraordinary movies. lorem50</p>
+    </div>
     <img src="tenet.png" alt="">
     <img src="2021-01-19-removebg-preview (2).png" alt="">
     <img src="cuigear12.png" alt="">
