--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>what the hell is going on</p>
     <div>
         <h1>Christofar Nolan</h1>
-        <p>Well, there is nothing new about him. He is a popular director for making extraordinary movies. lorem50</p>
+        <p>Well, there is nothing new about him. He is a popular director for making extraordinary movies. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, neque quia. Amet quibusdam consequuntur, neque non fuga voluptatem doloribus harum unde dicta ut minus reiciendis consequatur sequi, quis maxime. Distinctio eius eligendi labore dolore, quos itaque rerum neque reiciendis exercitationem sit facilis impedit iste blanditiis, esse asperiores voluptatibus, dolorem inventore.</p>
     </div>
     <img src="tenet.png" alt="">
     <img src="2021-01-19-removebg-preview (2).png" alt="">
