--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project4043</title>
+    <style>
+        h1 {
+            color: chocolate;
+        }
+    </style>
+
 </head>
+
 <body>
     <h1>This is becoming crazy but i'm loving it</h1>
     <h3>okay, that's sounds crazy</h3>
     <p>what the hell is going on</p>
     <div>
         <h1>Christofar Nolan</h1>
-        <p>Well, there is nothing new about him. He is a popular director for making extraordinary movies. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident, neque quia. Amet quibusdam consequuntur, neque non fuga voluptatem doloribus harum unde dicta ut minus reiciendis consequatur sequi, quis maxime. Distinctio eius eligendi labore dolore, quos itaque rerum neque reiciendis exercitationem sit facilis impedit iste blanditiis, esse asperiores voluptatibus, dolorem inventore.</p>
+        <p>Well, there is nothing new about him. He is a popular director for making extraordinary movies. Lorem, ipsum
+            dolor sit amet consectetur adipisicing elit. Provident, neque quia. Amet quibusdam consequuntur, neque non
+            fuga voluptatem doloribus harum unde dicta ut minus reiciendis consequatur sequi, quis maxime. Distinctio
+            eius eligendi labore dolore, quos itaque rerum neque reiciendis exercitationem sit facilis impedit iste
+            blanditiis, esse asperiores voluptatibus, dolorem inventore.</p>
     </div>
     <img src="tenet.png" alt="">
     <img src="2021-01-19-removebg-preview (2).png" alt="">
     <img src="cuigear12.png" alt="">
 </body>
+
 </html>
